# agentquest

./: .env.example  README.md  pyproject.toml
agentquest/: __init__.py  cli.py  server.py  utils.py
agentquest/agents/: __init__.py  character_creator.py  consistency_checker.py  dm_agent.py  player_agent.py  quest_designer.py  world_builder.py
agentquest/crew/: __init__.py  gameplay_crew.py  generation_crew.py
agentquest/models/: __init__.py  game_state.py  gameplay.py  player_config.py  world_state.py
agentquest/prompts/: character_creator.md  consistency_checker.md  dm_agent.md  player_agent.md  quest_designer.md  world_builder.md
agentquest/tools/: __init__.py  character_sheet_tool.py  dice_roller.py  world_state_tool.py
docs/: specs.md
examples/: players.yaml  seeds.md
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/components/: GameView.tsx  LobbyView.tsx  SetupView.tsx
tests/integration/: test_gameplay_crew.py  test_generation_crew.py
tests/unit/: test_models.py
